--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.78.0
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
-numpy==1.19.5
+numpy>=1.21.2
 opencv-python==4.5.5.62
 openpyxl==3.0.9
 packaging==21.3
