--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ pyinstaller==4.5.1
 pyinstaller-hooks-contrib==2021.3
 python-multipart==0.0.5
 PyYAML==6.0
-torch==1.11.0
+torch==https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp37-cp37m-linux_x86_64.whl
