--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 fastapi==0.78.0
 numpy>=1.21.2
 opencv-python==4.5.5.62
@@ -6,4 +7,5 @@ pyinstaller==4.5.1
 pyinstaller-hooks-contrib==2021.3
 python-multipart==0.0.5
 PyYAML==6.0
-torch==1.8.1+cpu
+torch==1.8.1+cpu 
+torchvision==0.9.1+cpu
