--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 fastapi==0.78.0
 numpy>=1.21.2
 opencv-python==4.5.5.62
+opencv-python-headless==4.2.0.32
 pandas==1.3.3
 pyinstaller==4.5.1
 pyinstaller-hooks-contrib==2021.3
